crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_statictype.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Test",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "create",
                  "visibility": "Public",
                  "is_static": true,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "static"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 56,
                          "end": 62
                        }
                      }
                    },
                    "span": {
                      "start": 56,
                      "end": 62
                    }
                  },
                  "body": [],
                  "attributes": []
                }
              },
              "span": {
                "start": 23,
                "end": 66
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 67
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 67
  }
}
